Created interfaces for Selection, Crossover, and refactored code

--- a/GeneticAlgorithm/GeneticAlgorithm.vcxproj
+++ b/GeneticAlgorithm/GeneticAlgorithm.vcxproj
@@ -151,19 +151,29 @@
     <ClInclude Include="BitMutation.h" />
     <ClInclude Include="Chromosom.h" />
     <ClInclude Include="CrossoverStrategy.h" />
+    <ClInclude Include="OnePointCrossover.h" />
+    <ClInclude Include="RuletteWheelSelection.h" />
+    <ClInclude Include="SelectionCrossoverStrategy.h" />
     <ClInclude Include="EvaluationStrategy.h" />
     <ClInclude Include="GeneticAlgorithm.h" />
     <ClInclude Include="MutateStrategy.h" />
+    <ClInclude Include="SelectionCrossover.h" />
+    <ClInclude Include="SelectionStrategy.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BinaryVector.cpp" />
     <ClCompile Include="BitMutation.cpp" />
     <ClCompile Include="Chromosom.cpp" />
+    <ClCompile Include="CrossoverStrategy.tpp" />
+    <ClCompile Include="OnePointCrossover.cpp" />
+    <ClCompile Include="RuletteWheelSelection.cpp" />
+    <ClCompile Include="SelectionCrossover.tpp" />
+    <ClCompile Include="SelectionStrategy.tpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CrossoverStrategy.tpp" />
+    <None Include="SelectionCrossoverStrategy.tpp" />
     <None Include="EvaluationStrategy.tpp" />
     <None Include="GeneticAlgorithm.tpp" />
     <None Include="MutateStrategy.tpp" />
