--- a/GeneticAlgorithm/GeneticAlgorithm.vcxproj.filters
+++ b/GeneticAlgorithm/GeneticAlgorithm.vcxproj.filters
@@ -4,35 +4,38 @@
     <ClCompile Include="Source.cpp">
       <Filter>sources</Filter>
     </ClCompile>
-    <ClCompile Include="Chromosom.cpp">
-      <Filter>sources</Filter>
-    </ClCompile>
     <ClCompile Include="BinaryVector.cpp">
       <Filter>chromosoms</Filter>
     </ClCompile>
     <ClCompile Include="BitMutation.cpp">
       <Filter>mutations</Filter>
     </ClCompile>
-    <ClCompile Include="SelectionStrategy.tpp">
-      <Filter>selection</Filter>
-    </ClCompile>
-    <ClCompile Include="SelectionCrossover.tpp">
-      <Filter>sources</Filter>
-    </ClCompile>
     <ClCompile Include="CrossoverStrategy.tpp">
       <Filter>crossover</Filter>
-    </ClCompile>
-    <ClCompile Include="RuletteWheelSelection.cpp">
-      <Filter>selection</Filter>
     </ClCompile>
     <ClCompile Include="OnePointCrossover.cpp">
       <Filter>crossover</Filter>
     </ClCompile>
+    <ClCompile Include="ParentSelectionStrategy.tpp">
+      <Filter>parent_selection</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectionStrategy.h">
+      <Filter>selection</Filter>
+    </ClCompile>
+    <ClCompile Include="Chromosom.cpp">
+      <Filter>chromosoms</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectionCrossover.tpp">
+      <Filter>crossover</Filter>
+    </ClCompile>
+    <ClCompile Include="EliminationSelection.tpp">
+      <Filter>selection</Filter>
+    </ClCompile>
+    <ClCompile Include="RuletteWheelSelection.tpp">
+      <Filter>parent_selection</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Chromosom.h">
-      <Filter>headers</Filter>
-    </ClInclude>
     <ClInclude Include="GeneticAlgorithm.h">
       <Filter>headers</Filter>
     </ClInclude>
@@ -42,32 +45,35 @@
     <ClInclude Include="EvaluationStrategy.h">
       <Filter>headers</Filter>
     </ClInclude>
-    <ClInclude Include="MutateStrategy.h">
-      <Filter>headers</Filter>
-    </ClInclude>
     <ClInclude Include="BinaryVector.h">
       <Filter>chromosoms</Filter>
     </ClInclude>
     <ClInclude Include="BitMutation.h">
       <Filter>mutations</Filter>
     </ClInclude>
-    <ClInclude Include="SelectionCrossoverStrategy.h">
-      <Filter>headers</Filter>
-    </ClInclude>
-    <ClInclude Include="SelectionCrossover.h">
-      <Filter>headers</Filter>
-    </ClInclude>
-    <ClInclude Include="SelectionStrategy.h">
-      <Filter>selection</Filter>
-    </ClInclude>
     <ClInclude Include="CrossoverStrategy.h">
       <Filter>crossover</Filter>
     </ClInclude>
     <ClInclude Include="RuletteWheelSelection.h">
-      <Filter>selection</Filter>
+      <Filter>parent_selection</Filter>
     </ClInclude>
     <ClInclude Include="OnePointCrossover.h">
       <Filter>crossover</Filter>
+    </ClInclude>
+    <ClInclude Include="ParentSelectionStrategy.h">
+      <Filter>parent_selection</Filter>
+    </ClInclude>
+    <ClInclude Include="Chromosom.h">
+      <Filter>chromosoms</Filter>
+    </ClInclude>
+    <ClInclude Include="MutateStrategy.h">
+      <Filter>mutations</Filter>
+    </ClInclude>
+    <ClInclude Include="SelectionCrossover.h">
+      <Filter>crossover</Filter>
+    </ClInclude>
+    <ClInclude Include="EliminationSelection.h">
+      <Filter>selection</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -86,8 +92,11 @@
     <Filter Include="crossover">
       <UniqueIdentifier>{c1fbfcf7-bdd5-46f3-af91-5945fd14c480}</UniqueIdentifier>
     </Filter>
-    <Filter Include="selection">
+    <Filter Include="parent_selection">
       <UniqueIdentifier>{88c503aa-136d-4adf-9a55-d004f87ee417}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="selection">
+      <UniqueIdentifier>{aee3fc47-3f8d-4712-ac51-4cfd2f9f0287}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -97,11 +106,11 @@
     <None Include="EvaluationStrategy.tpp">
       <Filter>sources</Filter>
     </None>
-    <None Include="MutateStrategy.tpp">
-      <Filter>sources</Filter>
+    <None Include="SelectionStrategy.tpp">
+      <Filter>selection</Filter>
     </None>
-    <None Include="SelectionCrossoverStrategy.tpp">
-      <Filter>sources</Filter>
+    <None Include="MutateStrategy.tpp">
+      <Filter>mutations</Filter>
     </None>
   </ItemGroup>
 </Project>
